force-app/main/default/objects/TaskEvent__e/TaskEvent__e.object-meta.xml
<CustomObject>
    <label>Tarea</label>
    <pluralLabel>Tareas</pluralLabel>
</CustomObject>