force-app/main/default/objects/TaskEvent__e/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>