force-app/main/default/objects/TaskEvent__e/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <label>RecordId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>